public/css/bootstrap-mod.css
/* ... */
/* Buttons & Links */
.btn-link-light {
    font-weight: normal;
    color: #818A91;
    border-radius: 0;
    text-shadow:1px 1px #FFF;
    cursor:pointer;
}
.btn-link-light,
.btn-link-light:active,
.btn-link-light.active,
fieldset[disabled] .btn-link-light {
    background-color: transparent;
    -webkit-box-shadow: none;
    box-shadow: none;
}
.btn-link-light:hover,
.btn-link-light:focus {
    color: #dc4c4c;
    border-color: transparent;
    text-decoration: none;
    background-color: transparent;
}

/* Hide items on mobile */
@media (max-width: 767px) {
    .mobile-hide {
        display:none;
    }
}
@media (max-width: 992px) {
    .tablet-hide {
        display:none;
    }
}

/* Nav Bar */
.navbar-default {
    border-bottom:1px solid #d5d5d5;
    -webkit-box-shadow: inset 0 1px 0 rgba(250, 250, 250, 0.15), 0 1px 5px rgba(0, 0, 0, 0.065);
    box-shadow: inset 0 1px 0 rgba(250, 250, 250, 0.15), 0 1px 5px rgba(0, 0, 0, 0.065);
    z-index:100;
}
.navbar-brand {
    height:30px;
    width:102px;
    margin:10px 15px 0 0;
    background:url('img/logos/aecore-topbar.svg') 0 0 no-repeat;
    display:inline-block;
}
@media (max-width: 767px) {
    .navbar-brand {
        height:30px;
        width:30px;
        margin:10px 15px 0 0;
        background:url('img/logos/aecore-topbar-icon.svg') 0 -30px no-repeat;
        display:inline-block;
    }
}

/* Notifcations window */
.notification-tile {
  width:100%;
  padding:7px 12px;
  margin:0;
  font-size:0.9em;
  display:block;
  overflow:auto;
  cursor:pointer;
  border-top:1px solid #e5e5e5;
}
.notification-tile.unread {
  background:#EBF2FB;
}
.notification-tile:hover {
  background:#F4F7F9;
}
.notification-tile .user_avatar {
  width:35px;
  height:35px;
  border-radius:3px;
  padding:0;
  margin:0; 
  float:left;
}
.notification-dismiss {
  width:14px;
  height:15px;
  margin-left:4px;
  color:#999;
  float:right;
  text-shadow:1px 1px #FFF;
}
.notification-dismiss:hover {
  color:#d9534f;
}
.notification-tile p {
  margin:0 0 0 43px;
  padding:0;
}

/* Modals */
.modal-body {
    background:#F4F7F9;
}
.modal-header {
    padding:15px 20px;
}
.modal-footer {
    margin-top:0;
    padding:0 20px 20px 20px;
    border-top:0;
    background:#F4F7F9;
}
/* Autocompelte in modals */
.ui-autocomplete.ui-front {
    z-index:2000;
}

/* Top Bar Links */
.navbar-nav > li > a {
    padding:15px 12px 12px 12px;
    color:#dc4c4c;
    border-bottom:3px solid #FFF;
    outline:none;
}
.navbar-nav > li > a.navbar-link:hover {
    color:#dc4c4c;
    border-bottom:3px solid #dc4c4c;
    transition: border-color 0.2s linear;
    -moz-transition: border-color 0.2s linear;    /* FF3.7+ */
    -o-transition: border-color 0.2s linear;      /* Opera 10.5 */
    -webkit-transition: border-color 0.2s linear; /* Saf3.2+, Chrome */
}
.navbar-nav > li > a.navbar-link-active {
    color:#DA4B4B;
    border-bottom:3px solid #DA4B4B;
    font-weight:bold;
}
.navbar-nav > li > a.navbar-link-active:hover {
    color:#DA4B4B;
    border-bottom:3px solid #DA4B4B;
    transition: border-color 0.2s linear;
    -moz-transition: border-color 0.2s linear;    /* FF3.7+ */
    -o-transition: border-color 0.2s linear;      /* Opera 10.5 */
    -webkit-transition: border-color 0.2s linear; /* Saf3.2+, Chrome */
}
@media (max-width: 767px) {
    .navbar-nav > li > a.navbar-link {
        border-bottom:none;
    }
    .navbar-nav > li > a.navbar-link:hover {
        border-bottom:none;
    }
    .navbar-nav > li > a.navbar-link-active {
        border-bottom:3px solid #FFF;
    }  
    .navbar-nav > li > a.navbar-link-active:hover {
        border-bottom:3px solid #FFF;
    }  
}

/* Avatars */
.avatar_upload {
    margin-left:90px;
}
.avatar_xs {
    width:20px;
    height:20px;
    margin:0 5px 0 0;
    border-radius:2px;
    float:left;
}
.avatar_sm {
    width:34px;
    height:34px;
    margin:0 8px 0 0;
    border-radius:3px;
    float:left;
}
.avatar_md {
    width:40px;
    height:40px;
    border-radius:3px;
    float:left;
}
.avatar_lg {
    width:75px;
    height:75px;
    border-radius:3px;
    float:left;
}
.avatar_profile {
    width:120px;
    height:120px;
    margin:20px auto;
    border-radius:60px;
    display:block;
}
.avatar_navbar {
    width:30px;
    height:30px;
    margin:-6px 5px 0 0;
    border-radius:15px;
    float:left;
}
.avatar_company {
    width:32px;
    height:32px;
    margin-right:5px;
    float:left;
}
.logo_company {
    max-width:200px;
    max-height:75px;
    margin-bottom:15px;
}
@media (max-width: 767px) {
    .avatar_xs {
        margin:0;
        float:none;
    }
}

/* Page heading */
.pagehead {
    padding:15px 0;
}
.pagehead h1 {
    padding:0;
    margin:0;
    font-size:20px;
    line-height:30px;
    color:#666;
    text-shadow:1px 1px #FFF;
}
.table-filters{
    margin-bottom:15px;
}

/* Tables */
table {
    font-size:1em;
}

/* Main content wrapper */
.page-wrapper {
    position:absolute;
    top:50px;
    right:0;
    bottom:0;
    left:250px;
    overflow-y:auto;
    background:#FFF;
}
.page-wrapper-short {
    position:absolute;
    top:50px;
    right:0;
    bottom:250px;
    left:250px;
    overflow-y:auto;
    background:#FFF;
}
.page-wrapper-footer {
    position:absolute;
    height:250px;
    right:0;
    bottom:0;
    left:250px;
    background:#FFF;
    border-top:1px solid #c9d1d6;
}
@media(max-width:768px) {
    .page-wrapper {
        left:0;
    }
    .page-wrapper-short {
        left:0;
    }
    .page-wrapper-footer {
        left:0;
    }
}

/* Labels */
.control-label {
    color:#777;
}
.control-label-static {
    color:#777;
}
.control-label-lg {
    font-size:1.1em;
    padding-top:8px;
    color:#999;
}
.label-lg {
    margin:4px 5px 6px 0;
    padding: 5px 7px;
    font-size:1em;
    font-weight:normal;
}
.label-sm {
    padding:1px 5px;
    font-size:0.75em;
    font-weight:normal;
    border-radius:8px;
}

/* Sub-menus */
.dropdown-submenu {
    position: relative;
}
/* ... */

